fix representation on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,58 +1,3 @@
-@media print {
-    * {
-        font-size: 96% !important;
-    }
-
-    h1, h2 {
-        margin: 2px 0 2px 0 !important;
-        font-size: 95% !important;
-    }
-
-    .contacts h1 {
-        font-size: 100% !important;
-    }
-
-    span.badge {
-        display: none !important;
-    }
-
-    .avatar {
-        width: 150px !important;
-    }
-
-    .contacts {
-        width: calc(100% - 180px);
-    }
-
-    .avatar img {
-        border-radius: 20px !important;
-        box-shadow: 0 0 10px grey !important;
-    }
-
-    .content {
-        margin: 0 5px 0 5px !important;
-        padding: 0 !important;
-    }
-
-    table:not([class='info']) td:first-child {
-        width: 180px !important;
-    }
-
-    .print-only {
-        display: initial !important;
-    }
-
-    .web-only {
-        display: none !important;
-    }
-}
-
-@media (max-width: 1150px) {
-    .content {
-        margin: 0px 10px 0px 10px;
-    }
-}
-
 .print-only {
     display: none;
 }
@@ -147,7 +92,7 @@ table {
     width: 100%;
 }
 
-.info-table tr>td {
+.info-table tr > td {
     padding-bottom: 5px;
     vertical-align: text-top;
 }
@@ -171,11 +116,7 @@ table {
 span.badge {
     /*font-weight: bold;*/
     color: white;
-    padding-right: .6em;
-    padding-left: .6em;
-    padding-top: .2em;
-    padding-bottom: .1em;
-    border-radius: 10rem;
+    padding: .2em .6em .1em;
     text-shadow: 0 0 2px black;
     margin: 1px;
     display: inline-block;
@@ -187,6 +128,7 @@ span.badge {
 span.badge.docker {
     background: deepskyblue;
 }
+
 span.badge.docker:after {
     content: 'Docker';
 }
@@ -194,6 +136,7 @@ span.badge.docker:after {
 span.badge.nodejs {
     background: darkgreen;
 }
+
 span.badge.nodejs:after {
     content: 'NodeJS';
 }
@@ -201,6 +144,7 @@ span.badge.nodejs:after {
 span.badge.python {
     background: gold;
 }
+
 span.badge.python:after {
     content: 'Python';
 }
@@ -208,6 +152,7 @@ span.badge.python:after {
 span.badge.math {
     background: darkblue;
 }
+
 span.badge.math:after {
     content: 'Math';
 }
@@ -215,6 +160,7 @@ span.badge.math:after {
 span.badge.java {
     background: #E00003;
 }
+
 span.badge.java:after {
     content: 'Java';
 }
@@ -222,6 +168,7 @@ span.badge.java:after {
 span.badge.stylus {
     background: #FF6347;
 }
+
 span.badge.stylus:after {
     content: 'Stylus';
 }
@@ -229,6 +176,7 @@ span.badge.stylus:after {
 span.badge.ccharp {
     background: #FF6347;
 }
+
 span.badge.ccharp:after {
     content: 'C#';
 }
@@ -236,6 +184,58 @@ span.badge.ccharp:after {
 span.badge.kubernetes {
     background: #306adf;
 }
+
 span.badge.kubernetes:after {
     content: 'K8S';
+}
+
+@media print {
+    * {
+        font-size: 96% !important;
+    }
+
+    h1, h2 {
+        margin: 2px 0 2px 0;
+        font-size: 95% !important;
+    }
+
+    span.badge {
+        display: none;
+    }
+
+    .avatar {
+        width: 150px;
+    }
+
+    .contacts {
+        width: calc(100% - 180px);
+    }
+
+    .avatar img {
+        border-radius: 20px;
+        box-shadow: 0 0 10px grey;
+    }
+
+    .content {
+        margin: 0 5px 0 5px;
+        padding: 0;
+    }
+
+    table:not([class='info']) td:first-child {
+        width: 180px;
+    }
+
+    .print-only {
+        display: initial;
+    }
+
+    .web-only {
+        display: none;
+    }
+}
+
+@media (max-width: 1150px) {
+    .content {
+        margin: 0 10px 0 10px;
+    }
 }
